tests/Checker/everything/errors/24c.vc
int main() {
    for (;;) {}
    continue;
    return 1;
}
